카카오 지도 1차

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b859fc5d5bf1ff7650f39ab37a03d3f9
+    "
+    ></script>
+    <!-- services와 clusterer, drawing 라이브러리 불러오기 -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=services,clusterer,drawing"
+    ></script>
     <title>Profile</title>
   </head>
   <body>
