--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,14 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b859fc5d5bf1ff7650f39ab37a03d3f9
     "
     ></script>
+    <!-- 카카오 맵 -->
     <!-- services와 clusterer, drawing 라이브러리 불러오기 -->
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=services,clusterer,drawing"
     ></script>
+    <!-- 카카오 로그인 -->
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/v1/kakao.js"></script>
     <title>Profile</title>
   </head>
   <body>
